--- a/newDesign/css/business.css
+++ b/newDesign/css/business.css
@@ -51,6 +51,7 @@ body {background-color: #fff;}
 
 .heroBusinessContainer .btnBox a {
     font-weight: 600;
+    padding: 0 8px;
 }
 
 .whyUseOpenpay {
@@ -277,6 +278,10 @@ body {background-color: #fff;}
     font-size: 14px;
     font-weight: 600;
     letter-spacing: -0.44px;
+}
+
+.readyRegister .btnBox a {
+    padding: 0 8px;
 }
 
 @media (max-width: 1280px) {
