--- a/newDesign/css/how.css
+++ b/newDesign/css/how.css
@@ -58,6 +58,7 @@ body {background-color: #fff;}
 .howItWorks {
     padding: 80px 0;
     margin: 0 auto;
+    color: #3C465A;
 }
 .howItWorks .list-group  {
     padding-left: 10px;
@@ -135,6 +136,7 @@ body {background-color: #fff;}
     padding: 80px 50px;
     margin: 0 auto;
     background-color: #F4F7FF;
+    color: #3C465A;
 }
 .everyStep table {
     text-align: center;
