--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -117,6 +117,10 @@ body {background-color: #fff;}
     margin: 0 auto;
 }
 
+.howItWorks .col-3 .options p a {
+    text-decoration: underline;
+}
+
 .howItWorks .learnMoreWrapper {
     text-align: center;
     padding-top: 60px;
